@@ -9,7 +9,9 @@ Changes in JMurmel-1.4.6 relative to JMurmel-1.4.5
  * added tailrecursion->loop transformation for compiled Murmel:
    transform the innermost tail recursion/ named let/ let* /letrec into a loop in compiled code
    avoiding the TCO trampoline
- * added limited support for non-toplevel defuns aka let-over-lambda in compiled Murmel
+ * added limited support for non-toplevel define/ defun aka let-over-lambda in compiled Murmel:
+   define/ defun may now appear in the body of (possibly nested) let/ let*/ letrec/ multiple-value-bind
+   forms
 
  * mlib: added values as a place for setf
  * mlib: added psetf
